apps/prod/gotify/deployment-strategy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: default
spec:
  strategy:
    type: Recreate
